--- a/client/pom.xml
+++ b/client/pom.xml
@@ -92,7 +92,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>ds.tutorials.communication.client.MainClass</mainClass>
+                            <mainClass>com.cw2.client.MainClass</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
